RESOLVED FIXED307775
Fix Unified sources build issues under OVERLAY_REGIONS_REMOTE_EFFECT
https://bugs.webkit.org/show_bug.cgi?id=307775
Summary Fix Unified sources build issues under OVERLAY_REGIONS_REMOTE_EFFECT
Etienne
Reported 2026-02-13 01:52:10 PST
Fix Unified sources build issues under OVERLAY_REGIONS_REMOTE_EFFECT
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-13 01:52:18 PST
Etienne
Comment 2 2026-02-13 01:54:49 PST
EWS
Comment 3 2026-02-13 03:34:18 PST
Committed 307456@main (2bb3eed95cc0): <https://commits.webkit.org/307456@main> Reviewed commits have been landed. Closing PR #58613 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.