Fix Unified sources build issues under OVERLAY_REGIONS_REMOTE_EFFECT https://bugs.webkit.org/show_bug.cgi?id=307775 rdar://170303774

Reviewed by Anne van Kesteren.

Add missing imports.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeNode.mm:

Canonical link: https://commits.webkit.org/307456@main